--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,8 +14,8 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
-          <li><a href="#">Log in</a></li>
-          <li><a href="#">log out</a></li>
+          <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
+          <li><a href="{{ url_for('auth.logout') }}">log out</a></li>
         </ul>
       </div>
     </div>
