--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,3 +9,23 @@
     letter-spacing: 4px;
     opacity: 0.9;
 }
+.carousel-inner img{
+    width: 100%;
+    margin: auto;
+}
+.carousel-caption {
+    background: rgba(0,0,0,0.5)
+}
+.carousel-caption h3{
+    color: #fff;
+}
+body{
+    font: 400 15px 'montserrat',sans-serif;
+    color: #777;
+}
+h3,h4 {
+    margin: 10px 0 30px 0;
+    letter-spacing: 5px;
+    font-size: 20px;
+    color: #111;
+}
