--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,45 @@
 {% extends 'base.html' %}
 {%block content%}
-<h1> </h1>
+<header id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="{{url_for('static', filename='img/arch1.jpg')}}" alt="arch1">
+        <div class="carousel-caption">
+          <h3>Great Architect Justified.</h3>
+        </div>
+      </div>
+        <div class="item">
+        <img src="{{url_for('static', filename='img/arch2.jpg')}}" alt="arch2">
+        <div class="carousel-caption">
+          <h3>Passionate about great architecture and all things sustainable.</h3>
+        </div>
+      </div>
+        <div class="item">
+        <img src="{{url_for('static', filename='img/arch3.jpg')}}" alt="arch3">
+        <div class="carousel-caption">
+          <h3>The architect’s role is to make the mythic real.</h3>
+        </div>
+      </div>
+       <div class="item">
+        <img src="{{url_for('static', filename='img/arch4.jpg')}}" alt="arch3">
+        <div class="carousel-caption">
+          <h3>Building Castle in Cloud.</h3>
+        </div>
+      </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</header>
 {%endblock%}
