--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -11,7 +11,7 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Home</a></li>
+          <li><a href="{{ url_for('main.index') }}">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="{{ url_for('auth.login') }}">Log in</a></li>
