--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -29,3 +29,11 @@ h3,h4 {
     font-size: 20px;
     color: #111;
 }
+.img{
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width:1200vh;
+    height:700vh;
+}
