--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,30 +9,29 @@
     </ol>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="{{url_for('static', filename='img/arch1.jpg')}}" alt="arch1">
+        <img src="{{url_for('static', filename='img/arch1.jpg')}}" alt="arch1" style="width:1200; height:700;">
         <div class="carousel-caption">
           <h3>Great Architect Justified.</h3>
         </div>
       </div>
         <div class="item">
-        <img src="{{url_for('static', filename='img/arch2.jpg')}}" alt="arch2">
-        <div class="carousel-caption">
+        <img src="{{url_for('static', filename='img/arch2.jpg')}}" alt="arch2" style="width:1200; height:700;>
+        <div class=" carousel-caption"</div>
           <h3>Passionate about great architecture and all things sustainable.</h3>
         </div>
-      </div>
+
         <div class="item">
-        <img src="{{url_for('static', filename='img/arch3.jpg')}}" alt="arch3">
-        <div class="carousel-caption">
+        <img src="{{url_for('static', filename='img/arch3.jpg')}}" alt="arch3" style="width:1200; height:700;>
+        <div class=" carousel-caption">
           <h3>The architect’s role is to make the mythic real.</h3>
         </div>
-      </div>
+
        <div class="item">
-        <img src="{{url_for('static', filename='img/arch4.jpg')}}" alt="arch3">
-        <div class="carousel-caption">
+        <img src="{{url_for('static', filename='img/arch4.jpg')}}" alt="arch4" style="width:1200; height:700;>
+        <div class=" carousel-caption ">
           <h3>Building Castle in Cloud.</h3>
-        </div>
-      </div>
-    </div>
+       </div>
+
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -42,4 +41,22 @@
       <span class="sr-only">Next</span>
     </a>
 </header>
+<!-- Container (The About Section) -->
+<section id="about" class="container text-center">
+  <article>
+    <h3 class="slideanim">About</h3>
+    <p class="slideanim"><em>Design with purpose</em></p>
+    <p class="slideanim">
+     Whether you’re an aspiring architect looking for sound advice, or merely an enthusiast scoping hot designs from around the world, there’s no wrong reason to check out the best architecture blog.
+     Indeed, while architecture remains one of mankind’s oldest art forms, that doesn’t stop original ideas from emerging on a near daily basis.
+    </p>
+    <br>
+    <br>
+  </article>
+  <div class="row display-flex">
+    <article class="col-xs-12  slideanim">
+      <p class="text-center"><strong>With our blog, you can keep pace with the latest ideas as soon as they surface and also get different perspectives and ideas.</strong></p><br>
+    </article>
+  </div>
+</section>
 {%endblock%}
