--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {%block content%}
-<div class="container">
+<div class="row">
     <form action="/signup" method="POST">
         {% if error %}
         <div class="alert alert-danger" role="alert">
@@ -8,19 +8,19 @@
         </div>
         {% endif %}
 
-        <div class="form-group">
+        <div class="col-sm-6 form-group">
             <label>User Name</label>
             <input type="text" class="form-control" placeholder="User Name" name="username">
         </div>
-        <div class="form-group">
+        <div class="col-sm-6 form-group">
             <label>Email address</label>
             <input type="email" class="form-control" placeholder="Enter email" name="email">
         </div>
-        <div class="form-group">
+        <div class="col-sm-6 form-group">
             <label>Password</label>
             <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
-        <div class="form-group">
+        <div class="col-sm-6 form-group">
             <label>Confirm Password</label>
             <input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password">
         </div>
