--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,11 +69,11 @@
                             <p>Posted: {{blog.posted.strftime('%d-%m-%Y')}}</p>
                         </div>
                         <div class="col-md-6">
-                            <form class="form-inline">
+                            <form class="form-inline" action="/comment" method="POST">
                                 <div class="md-form form-group">
                                     <!-- <i class="fa fa-lock prefix"></i> -->
                                     <label for="form92">Type your comment</label>
-                                    <input type="text"  class="form-control">
+                                    <input type="text"  class="form-control" name="comment" >
 
                                 </div>
                                 <div class="md-form form-group">
