--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -43,7 +43,8 @@
     </div>
   </div>
   <div class="col-md-1"></div>
-    <div class="col-md-5" id="user">
+    <div class="col-md-5" >
+        <button class="btn btn-sm btn-info"><a href="{{url_for('main.new_blog')}}">Post</a></button>
 
   </div>
 </div>
