add modal to allow user to confirm if they want to delete a blog

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -18,11 +18,35 @@
                         <h3>Tittle: {{blog.title}}</h3>
                         <p>{{blog.content}}</p>
                         <p>{{blog.comment.count()}} Comments</p>
+                        {% if blog.user == current_user %}
+                            <div>
+                                <a class="btn btn-success btn-sm m-1" href="{{url_for('main.updateblog',blog_id = blog.id)}}">Edit Blog</a>
+                                <button class="btn btn-sm btn-danger m-1" data-toggle="modal" data-target="#modalConfirmDelete" type="submit">Delete </button>
+                            </div>
+                        {% endif %}
+
                     </div>
                 </div>
                 <hr>
             </div>
-            <div class="col-md-4">
+        </div>
+    </div>
+  <div class="modal fade" id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+        <div class="modal-dialog modal-sm modal-notify modal-danger" role="document">
+            <div class="modal-content text-center">
+              <div class="modal-header d-flex justify-content-center">
+                <p class="heading">Are you sure?</p>
+              </div>
+              <div class="modal-body">
+                <i class="fas fa-times fa-4x animated rotateIn"></i>
+              </div>
+              <div class="modal-footer flex-center">
+                <form action="{{url_for('main.delete_post',post_id = post.id)}}" method="POST">
+                    <input  type="submit" class="btn  btn-outline-danger btn-sm" value="Yes">
+                </form>
+                <a type="button" class="btn btn-sm btn-danger waves-effect" data-dismiss="modal">No</a>
+              </div>
             </div>
         </div>
     </div>
