--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -64,7 +64,7 @@
 <div class ="container">
     <div class = row>
 <div class="col-md-8">
-                {% for blog in blogs %}
+                {% for blog in blogs.items %}
                     <hr>
                     <div class="row">
                         <div class="col-md-7">
