add function to only display certain number of posts per page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -89,6 +89,18 @@
                     </div>
                     <hr>
                 {% endfor %}
+    {% for page_num in blogs.iter_pages(left_edge = 1, right_edge = 1, left_current=1, right_current = 2) %}
+                    {% if page_num %}
+                        {% if blogs.page == page_num %}
+                            <a href="{{url_for('main.index',page = page_num)}}" class="btn btn-sm btn-info mb-2">{{ page_num }}</a>
+                        {% else%}
+                        <a href="{{url_for('main.index',page = page_num)}}" class="btn btn-sm btn-outline-info mb-2">{{ page_num }}</a>
+                        {% endif %}
+                    {% else%}
+                        ...
+                    {% endif %}
+                {% endfor %}
+
             </div>
         <div class="col-md-4">
             {% for message in get_flashed_messages() %}
