add the userposts template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -68,7 +68,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-7">
-                            <p>By <span style="color: black">{{blog.user.username}}</span>  on {{blog.posted.strftime('%d-%m-%Y')}}</p>
+                            <p>By  <a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span style="color: black">{{blog.user.username}}</span> </a>  on {{blog.posted.strftime('%d-%m-%Y')}}</p>
                             <h3>Tittle: <a href="{{url_for('main.blog',id = blog.id)}}">{{blog.title}}</a></h3>
                             <p>{{blog.content}}</p>
                              <p>{{blog.comment.count()}} Comments</p>
