--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,12 +2,13 @@
 
 {% block content %}
     <div class="container">
-        <h1 class="text-center"> Welcome to my blog</h1>
+        <h1 class="text-center"> A Blog by {{blog.user.username}}</h1>
         <div class="row">
-            <div class="col-md-9">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
                 <hr>
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-8">
                         {% for message in get_flashed_messages() %}
                         <div class="alert alert-success">
                         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -18,17 +19,32 @@
                         <h3>Tittle: {{blog.title}}</h3>
                         <p>{{blog.content}}</p>
                         <p>{{blog.comment.count()}} Comments</p>
+                        {% for comment in comments %}
+                            <p><span style="font-weight: bold">{{comment.user.username}} : </span> {{comment.comment}}</p>
+                        {% endfor %}
                         {% if blog.user == current_user %}
                             <div>
                                 <a class="btn btn-success btn-sm m-1" href="{{url_for('main.updateblog',blog_id = blog.id)}}">Edit Blog</a>
                                 <button class="btn btn-sm btn-danger m-1" data-toggle="modal" data-target="#modalConfirmDelete" type="submit">Delete </button>
                             </div>
                         {% endif %}
-
+                    </div>
+                    <div class="col-md-4">
+                        <form class="form-inline" action="{{url_for('main.comment',blog_id = blog.id)}}" method="POST">
+                            <div class="md-form form-group">
+                                <!-- <i class="fa fa-lock prefix"></i> -->
+                                <label for="form92">Type your comment</label>
+                                <input type="text"  class="form-control" name ="newcomment" required>
+                            </div>
+                            <div class="md-form form-group">
+                                <button class="btn btn-sm btn-outline-info">Comment</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <hr>
             </div>
+            <div class="col-md-1"></div>
         </div>
     </div>
   <div class="modal fade" id="modalConfirmDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
