--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{% import 'bootstrap/wtf.html' as wtf %}
 {% block content %}
 <div class="container" style="margin-top: 1%">
 <div class="row">
