--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -43,3 +43,10 @@ h3,h4 {
     margin-right: 20px;
     margin-bottom: 16px;
   }
+  .cardquote{
+      background-color:rgba(116, 116, 116, 0.786);
+      padding: 3%;
+  }
+  #submit{
+      background-color: #315B96;
+  }
