--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -63,31 +63,39 @@
 <!--  blog section-->
 <div class ="container">
     <div class = row>
-<div class="col-md-8">
+<div class="col-md-7">
                 {% for blog in blogs.items %}
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-7">
-                            <p>By  <a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span style="color: black">{{blog.user.username}}</span> </a>  on {{blog.posted.strftime('%d-%m-%Y')}}</p>
-                            <h3>Tittle: <a href="{{url_for('main.blog',id = blog.id)}}">{{blog.title}}</a></h3>
-                            <p>{{blog.content}}</p>
-                             <p>{{blog.comment.count()}} Comments</p>
-                        </div>
-                        <div class="col-md-5">
-                            <form class="form-inline" action="{{url_for('main.comment',blog_id = blog.id)}}" method="POST">
-                                <div class="md-form form-group">
-                                    <!-- <i class="fa fa-lock prefix"></i> -->
-                                    <label for="form92">Type your comment</label>
-                                    <input type="text"  class="form-control" name="newcomment" required >
+    <div class="container bg mb-2">
+                        <hr>
+                        <div class="row ">
+                            <div class="col-md-2 ">
+                                    <img class="rounded-circle blog-img mr-10" src="{{ url_for('static', filename='photos/' + blog.user.profile_pic_path) }}">
+                                    <p id="usern"><a href="{{url_for('main.user_posts',username = blog.user.username)}}"><span  style="color: blue"><strong>{{blog.user.username | title}}</strong></span> </a> </p>
+                            </div>
+                            <div class="col-md-5 ml-10 ">
+                                <p>Posted on : {{blog.posted.strftime('%d-%m-%Y')}}</p>
+                                <h4><a href="{{url_for('main.blog',id = blog.id)}}">{{blog.title | upper}}</a></h4>
+                                <p>{{blog.content}}</p>
+                                <p >{{blog.comment.count()}} Comments</p>
 
-                                </div>
-                                <div class="md-form form-group">
-                                    <button class="btn btn-sm btn-outline-info">Comment</button>
-                                </div>
-                            </form>
+                            </div>
+                            <div class="col-md-5">
+                                <button class="btn btn-sm btn-info" id="profbutton">Comment</button>
+                                <form class="form-inline" id="form" action="{{url_for('main.comment',blog_id = blog.id)}}" method="POST">
+                                    <div class="md-form form-group">
+                                        <!-- <i class="fa fa-lock prefix"></i> -->
+                                        <label class="black-color">Type your comment</label>
+                                        <input type="text"  class="form-control black-color " name ="newcomment" required>
+                                    </div>
+                                    <div class="md-form form-group">
+                                        <button class="btn btn-sm btn-outline-info" id="submit">Comment</button>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
+                        <hr>
                     </div>
-                    <hr>
+
                 {% endfor %}
     {% for page_num in blogs.iter_pages(left_edge = 1, right_edge = 1, left_current=1, right_current = 2) %}
                     {% if page_num %}
@@ -109,9 +117,9 @@
                 {{ message }}
                 </div>
                 {% endfor %}
-                <form class="form-inline" action="{{url_for('main.subscribe')}}" method="POST">
+                <form class="form-inline ml-4" action="{{url_for('main.subscribe')}}" method="POST">
                     <div class="md-form form-group">
-                        <label for="form92">Enter Email Address...</label>
+                        <label class="white-color">Enter Email Address...</label>
                         <input type="email"  class="form-control" name ="subscriber" required>
                     </div>
                     <div class="md-form form-group">
