add quotes using quotes api

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -130,4 +130,14 @@
         </div>
     </div>
 </div>
+<!--   footer quotes-->
+    <footer class ="text-center">
+        <article class ="col-sm-6">
+            <p class="inline-block slideanim"><i class="fas fa-quote-left"></i>{{quote.quote}}<i class="fas fa-quote-right"></i>
+    <h1 class="uppercase general-sub slideanim"> - {{quote.author}}</h1>
+            </p>
+
+        </article>
+
+    </footer>
 {%endblock%}
