--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -20,13 +20,13 @@
     <div class="card testimonial-card">
     <div class="card-up indigo lighten-1"></div>
     <div class="avatar mx-auto white">
-      <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" alt="woman avatar">
+      <img src="{{profile_pic_path}}" class="rounded-circle account-img mt-2" >
     </div>
     <div class="card-body">
       <h4 class="card-title text-center">{{current_user.username|title}}</h4>
       <hr>
       <p> {{current_user.email}} </p>
-      <p><i class="fas fa-quote-left"></i> {{current_user.bio}} <i class="fas fa-quote-right"></i> </p>
+      <p><i class="fa fa-quote-left"></i> {{current_user.bio}} <i class="fa fa-quote-right"></i> </p>
       <button class="btn btn-sm btn-info" id="showform"> Update Profile</button>
     </div>
 
